--- a/lesson10/style/style1.css
+++ b/lesson10/style/style1.css
@@ -44,3 +44,45 @@ body {
 	padding: 10px 30px;
 	border: none;
 }
+.products_list_container {
+	width: 100%;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	margin-top: 70px;
+}
+
+.products_list_container .product_card {
+	width: 70%;
+	background-color: #34495e;
+	display: flex;
+	justify-content: space-between;
+	color: white;
+	padding: 30px 60px;
+	font-size: 25px;
+	border-radius: 20px;
+	margin-bottom: 30px;
+	position: relative;
+}
+
+.products_list_container .product_card:hover {
+	box-shadow: 5px 5px 20px 8px grey;
+}
+.remove_btn {
+	border-radius: 50%;
+	width: 30px;
+	height: 30px;
+	background-color: pink;
+	position: absolute;
+	border: 2px solid white;
+	right: -10px;
+	top: -10px;
+	opacity: 0;
+}
+.product_card:hover .remove_btn {
+	opacity: 1;
+}
+.empty_p {
+	font-size: 25px;
+	text-align: center;
+}
