--- a/Pro/lesson2. Content Media/style.css
+++ b/Pro/lesson2. Content Media/style.css
@@ -1,97 +1,108 @@
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    text-decoration: none;
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
+	text-decoration: none;
 }
 
 .container {
-    margin-left: auto;
-    margin-right: auto;
-    max-width: 1100px;
-    padding: 0 15px 0 15px;
+	margin-left: auto;
+	margin-right: auto;
+	max-width: 1100px;
+	padding: 0 15px 0 15px;
 }
 
 header {
-    background-color: bisque;
+	background-color: bisque;
 }
 
 .header_wrapper {
-    height: 180px;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
+	height: 180px;
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
 }
 
 .logo {
-    width: 100px;
-    height: 100px;
-    border-radius: 50%;
-    background-color: brown;
+	width: 100px;
+	height: 100px;
+	border-radius: 50%;
+	background-color: brown;
 }
 
 .menu_wrapper {
-    display: flex;
-    gap: 50px;
+	display: flex;
+	gap: 50px;
 }
 
 .card {
-    width: 300px;
-    height: 350px;
+	width: 300px;
+	height: 350px;
 
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-evenly;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: space-evenly;
 
-    background-color: aqua;
-    border-radius: 15px;
-    border: 1px solid black;
+	background-color: aqua;
+	border-radius: 15px;
+	border: 1px solid black;
 }
 
 .card_wrapper {
-    display: grid;
-    grid-template-columns: repeat(3, 300px);
-    justify-items: center;
-    justify-content: space-between;
-    gap: 30px;
-    padding-top: 50px;
-    padding-bottom: 50px;
+	display: grid;
+	grid-template-columns: repeat(3, 300px);
+	justify-items: center;
+	justify-content: space-between;
+	gap: 30px;
+	padding-top: 50px;
+	padding-bottom: 50px;
 }
 
 footer {
-    background-color: cadetblue;
+	background-color: cadetblue;
 }
 
 .footer_wrapper {
-    height: 100px;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    color: white;
-    font-size: 12px;
+	height: 100px;
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+	color: white;
+	font-size: 12px;
+}
+
+.menu_burger {
+	display: none;
 }
 
 /*при ширине экрана меньше 1000px, изменятся следующие свойства*/
 @media (max-width: 1000px) {
-    .container {
-        max-width: 700px;
-    }
+	.container {
+		max-width: 700px;
+	}
 
-    .card_wrapper {
-        grid-template-columns: repeat(2, 300px);
-        /*justify-content: space-evenly;*/
-    }
+	.card_wrapper {
+		grid-template-columns: repeat(2, 300px);
+		/*justify-content: space-evenly;*/
+	}
 }
 
-@media (max-width: 700px) {
-    .container {
-        max-width: 500px;
-    }
+@media (max-width: 750px) {
+	.content {
+		max-width: 550px;
+	}
 
-    .card_wrapper {
-        grid-template-columns: repeat(1, 300px);
-        background-color: #27ae60;
-        /*justify-content: space-evenly;*/
-    }
+	.card_wrapper {
+		grid-template-columns: repeat(1, 300px);
+		justify-content: center;
+	}
+
+	.menu_burger {
+		display: block;
+	}
+
+	.menu_wrapper {
+		display: none;
+	}
 }
